@@ -1,3 +1,8 @@
+2008-05-04  Jens Granseuer  <jensgr@gmx.net>
+
+	* theme-thumbnailer.c: (main): fix more breakage due to recent
+	changes in theme-info (bug #531284)
+
 2008-05-01  Jens Granseuer  <jensgr@gmx.net>
 
 	* theme-method.c: (vfs_module_init):
